--- a/webknossos/tests/cassettes/test_api_client/test_datastore_list.yml
+++ b/webknossos/tests/cassettes/test_api_client/test_datastore_list.yml
@@ -1,7 +1,7 @@
 http_interactions:
   - request:
       method: GET
-      path: /api/v9/datastores
+      path: /api/v10/datastores
       headers:
         host: localhost:9000
         accept: '*/*'
@@ -18,10 +18,12 @@ http_interactions:
       status:
         code: 200
       headers:
+        x-powered-by: Express
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Wed, 13 Aug 2025 11:21:31 GMT
+        date: Fri, 29 Aug 2025 18:44:38 GMT
+        connection: close
         content-type: application/json
         content-length: '129'
       body:
