--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -223,15 +223,15 @@ jobs:
         run: uv python install ${{ matrix.python-version }}
 
       - name: Check formatting
-        if: ${{ matrix.group == 1 }}
+        if: ${{ matrix.group == 1 && matrix.python-version == '3.11' }}
         run: ./format.sh check
 
       - name: Lint code
-        if: ${{ matrix.group == 1 }}
+        if: ${{ matrix.group == 1 && matrix.python-version == '3.11' }}
         run: ./lint.sh
 
       - name: Check typing
-        if: ${{ matrix.group == 1 }}
+        if: ${{ matrix.group == 1 && matrix.python-version == '3.11' }}
         run: ./typecheck.sh
 
       - name: Patch Python standard library to assert that fork is not allowed
@@ -240,7 +240,6 @@ jobs:
           cat /home/runner/.local/share/uv/python/cpython-${{ matrix.python-version }}.*-linux-x86_64-gnu/lib/python${{ matrix.python-version }}/multiprocessing/popen_fork.py
 
       - name: Python tests (with coverage)
-        if: ${{ matrix.python-version == '3.11' }}
         timeout-minutes: 30
         env:
           PYTHON_VERSION: ${{ matrix.python-version }}
@@ -248,7 +247,6 @@ jobs:
         run: ./test.sh --splits 3 --group ${{ matrix.group }} --splitting-algorithm least_duration --cov=webknossos --cov-report=
 
       - name: Python tests
-        if: ${{ matrix.python-version != '3.11' }}
         timeout-minutes: 30
         env:
           PYTHON_VERSION: ${{ matrix.python-version }}
