--- a/webknossos/tests/cassettes/test_api_client/test_build_info.yml
+++ b/webknossos/tests/cassettes/test_api_client/test_build_info.yml
@@ -1,7 +1,7 @@
 http_interactions:
   - request:
       method: GET
-      path: /api/v10/buildinfo
+      path: /api/v11/buildinfo
       headers:
         host: localhost:9000
         accept: '*/*'
@@ -23,14 +23,14 @@ http_interactions:
         access-control-max-age: '600'
         access-control-allow-origin: '*'
         x-permitted-cross-domain-policies: master-only
-        date: Fri, 29 Aug 2025 18:44:38 GMT
+        date: Fri, 12 Sep 2025 13:35:13 GMT
         connection: close
         content-type: application/json
-        content-length: '409'
+        content-length: '380'
       body:
         encoding: utf8
         data: >-
-          {"webknossos":{"name":"webknossos","ciTag":"","commitHash":"0858f84b3e03f2d4a45c4ce4665dcad8de43ae76","ciBuild":"","scalaVersion":"2.13.16","version":"dev","sbtVersion":"1.11.4","datastoreApiVersion":"2.0","commitDate":"Fri
-          Aug 29 17:31:37 2025
-          +0200"},"schemaVersion":138,"httpApiVersioning":{"currentApiVersion":10,"oldestSupportedApiVersion":5},"localDataStoreEnabled":true,"localTracingStoreEnabled":true}
+          {"webknossos":{"name":"webknossos","ciTag":"","commitHash":"442d09342aa00c0645263f0277f3f3d26b247eb1","ciBuild":"","scalaVersion":"2.13.16","version":"dev","sbtVersion":"1.11.4","commitDate":"Mon
+          Sep 8 14:02:19 2025
+          +0200"},"schemaVersion":140,"httpApiVersioning":{"currentApiVersion":11,"oldestSupportedApiVersion":5},"localDataStoreEnabled":true,"localTracingStoreEnabled":true}
         compression: none
