--- a/webknossos/tests/cassettes/test_api_client/test_generate_token_for_data_store.yml
+++ b/webknossos/tests/cassettes/test_api_client/test_generate_token_for_data_store.yml
@@ -23,11 +23,11 @@ http_interactions:
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Fri, 12 Sep 2025 13:35:13 GMT
+        date: Mon, 15 Sep 2025 10:40:58 GMT
         connection: close
         content-type: application/json
         content-length: '34'
       body:
         encoding: utf8
-        data: '{"token":"XbsA0R3tcQsjeTbXBjYlww"}'
+        data: '{"token":"nyevQ_ehdHw0b1UZZQ-9BQ"}'
         compression: none
