--- a/webknossos/tests/cassettes/test_api_client/test_build_info.yml
+++ b/webknossos/tests/cassettes/test_api_client/test_build_info.yml
@@ -18,17 +18,19 @@ http_interactions:
       status:
         code: 200
       headers:
+        x-powered-by: Express
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         access-control-max-age: '600'
         access-control-allow-origin: '*'
         x-permitted-cross-domain-policies: master-only
-        date: Thu, 18 Sep 2025 12:06:49 GMT
+        date: Wed, 08 Oct 2025 07:34:20 GMT
+        connection: close
         content-type: application/json
-        content-length: '400'
+        content-length: '380'
       body:
         encoding: utf8
         data: >-
-          {"webknossos":{"name":"webknossos","ciTag":"","commitHash":"08a00bc7d245faa7bbe89203f0d75562ac8288a9","ciBuild":"17797070893","scalaVersion":"2.13.16","version":"17797070893","sbtVersion":"1.11.4","commitDate":"Wed
-          Sep 17 12:08:59 2025
-          +0000"},"schemaVersion":141,"httpApiVersioning":{"currentApiVersion":11,"oldestSupportedApiVersion":5},"localDataStoreEnabled":true,"localTracingStoreEnabled":true}
+          {"webknossos":{"name":"webknossos","ciTag":"","commitHash":"bc63f8dfe87616fddbc7da2bd0139e04a329ca15","ciBuild":"","scalaVersion":"2.13.16","version":"dev","sbtVersion":"1.11.4","commitDate":"Tue
+          Oct 7 12:40:37 2025
+          +0000"},"schemaVersion":144,"httpApiVersioning":{"currentApiVersion":11,"oldestSupportedApiVersion":5},"localDataStoreEnabled":true,"localTracingStoreEnabled":true}
         compression: none
