--- a/webknossos/tests/cassettes/test_api_client/test_health.yml
+++ b/webknossos/tests/cassettes/test_api_client/test_health.yml
@@ -18,10 +18,12 @@ http_interactions:
       status:
         code: 200
       headers:
+        x-powered-by: Express
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Thu, 18 Sep 2025 12:06:48 GMT
+        date: Wed, 08 Oct 2025 07:34:20 GMT
+        connection: close
         content-type: text/plain; charset=UTF-8
         content-length: '2'
       body:
