--- a/webknossos/tests/cassettes/test_project/test_project_create.yml
+++ b/webknossos/tests/cassettes/test_project/test_project_create.yml
@@ -18,10 +18,12 @@ http_interactions:
       status:
         code: 200
       headers:
+        x-powered-by: Express
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Thu, 18 Sep 2025 12:04:59 GMT
+        date: Wed, 08 Oct 2025 07:33:29 GMT
+        connection: close
         content-type: application/json
         content-length: '440'
       body:
@@ -48,10 +50,12 @@ http_interactions:
       status:
         code: 200
       headers:
+        x-powered-by: Express
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Thu, 18 Sep 2025 12:04:59 GMT
+        date: Wed, 08 Oct 2025 07:33:29 GMT
+        connection: close
         content-type: application/json
         content-length: '717'
       body:
@@ -83,16 +87,18 @@ http_interactions:
       status:
         code: 200
       headers:
+        x-powered-by: Express
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Thu, 18 Sep 2025 12:04:59 GMT
+        date: Wed, 08 Oct 2025 07:33:29 GMT
+        connection: close
         content-type: application/json
         content-length: '625'
       body:
         encoding: utf8
         data: >-
-          {"name":"test_create_project","team":"570b9f4b2a7c0e3b008da6ec","teamName":"team_X1","owner":{"id":"570b9f4d2a7c0e4d008da6ef","email":"user_a@scalableminds.com","firstName":"user_A","lastName":"last_A","isAdmin":true,"isDatasetManager":true,"isAnonymous":false,"teams":[{"id":"570b9f4b2a7c0e3b008da6ec","name":"team_X1","isTeamManager":true},{"id":"59882b370d889b84020efd3f","name":"team_X3","isTeamManager":false},{"id":"59882b370d889b84020efd6f","name":"team_X4","isTeamManager":true}]},"priority":1,"paused":false,"expectedTime":1234,"isBlacklistedFromReport":false,"id":"68cbf56b010000b5001b67ed","created":1758197099949}
+          {"name":"test_create_project","team":"570b9f4b2a7c0e3b008da6ec","teamName":"team_X1","owner":{"id":"570b9f4d2a7c0e4d008da6ef","email":"user_a@scalableminds.com","firstName":"user_A","lastName":"last_A","isAdmin":true,"isDatasetManager":true,"isAnonymous":false,"teams":[{"id":"570b9f4b2a7c0e3b008da6ec","name":"team_X1","isTeamManager":true},{"id":"59882b370d889b84020efd3f","name":"team_X3","isTeamManager":false},{"id":"59882b370d889b84020efd6f","name":"team_X4","isTeamManager":true}]},"priority":1,"paused":false,"expectedTime":1234,"isBlacklistedFromReport":false,"id":"68e613cae10000bd14c0b691","created":1759908810187}
         compression: none
   - request:
       method: GET
@@ -113,10 +119,12 @@ http_interactions:
       status:
         code: 200
       headers:
+        x-powered-by: Express
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Thu, 18 Sep 2025 12:04:59 GMT
+        date: Wed, 08 Oct 2025 07:33:29 GMT
+        connection: close
         content-type: application/json
         content-length: '717'
       body:
