--- a/webknossos/tests/cassettes/test_task/test_get_task_type.yml
+++ b/webknossos/tests/cassettes/test_task/test_get_task_type.yml
@@ -18,10 +18,12 @@ http_interactions:
       status:
         code: 200
       headers:
+        x-powered-by: Express
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Thu, 18 Sep 2025 12:05:02 GMT
+        date: Wed, 08 Oct 2025 07:33:31 GMT
+        connection: close
         content-type: application/json
         content-length: '440'
       body:
@@ -48,10 +50,12 @@ http_interactions:
       status:
         code: 200
       headers:
+        x-powered-by: Express
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Thu, 18 Sep 2025 12:05:02 GMT
+        date: Wed, 08 Oct 2025 07:33:31 GMT
+        connection: close
         content-type: application/json
         content-length: '822'
       body:
@@ -102,16 +106,18 @@ http_interactions:
       status:
         code: 200
       headers:
+        x-powered-by: Express
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Thu, 18 Sep 2025 12:05:02 GMT
+        date: Wed, 08 Oct 2025 07:33:31 GMT
+        connection: close
         content-type: application/json
         content-length: '388'
       body:
         encoding: utf8
         data: >-
-          {"id":"68cbf56e010000b7001b6807","summary":"test_task_type","description":"This
+          {"id":"68e613cbe100009b14c0b6ab","summary":"test_task_type","description":"This
           is a test task
           type","teamId":"570b9f4b2a7c0e3b008da6ec","teamName":"team_X1","settings":{"allowedModes":[],"branchPointsAllowed":true,"somaClickingAllowed":true,"volumeInterpolationAllowed":false,"mergerMode":false,"magRestrictions":{"min":1,"max":1}},"recommendedConfiguration":null,"tracingType":"volume"}
         compression: none
@@ -134,10 +140,12 @@ http_interactions:
       status:
         code: 404
       headers:
+        x-powered-by: Express
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Thu, 18 Sep 2025 12:05:02 GMT
+        date: Wed, 08 Oct 2025 07:33:31 GMT
+        connection: close
         content-type: application/json
         content-length: '53'
       body:
@@ -163,10 +171,12 @@ http_interactions:
       status:
         code: 200
       headers:
+        x-powered-by: Express
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Thu, 18 Sep 2025 12:05:02 GMT
+        date: Wed, 08 Oct 2025 07:33:31 GMT
+        connection: close
         content-type: application/json
         content-length: '717'
       body:
@@ -198,16 +208,18 @@ http_interactions:
       status:
         code: 200
       headers:
+        x-powered-by: Express
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Thu, 18 Sep 2025 12:05:02 GMT
+        date: Wed, 08 Oct 2025 07:33:31 GMT
+        connection: close
         content-type: application/json
         content-length: '618'
       body:
         encoding: utf8
         data: >-
-          {"name":"test_project","team":"570b9f4b2a7c0e3b008da6ec","teamName":"team_X1","owner":{"id":"570b9f4d2a7c0e4d008da6ef","email":"user_a@scalableminds.com","firstName":"user_A","lastName":"last_A","isAdmin":true,"isDatasetManager":true,"isAnonymous":false,"teams":[{"id":"570b9f4b2a7c0e3b008da6ec","name":"team_X1","isTeamManager":true},{"id":"59882b370d889b84020efd3f","name":"team_X3","isTeamManager":false},{"id":"59882b370d889b84020efd6f","name":"team_X4","isTeamManager":true}]},"priority":1,"paused":false,"expectedTime":1234,"isBlacklistedFromReport":false,"id":"68cbf56e010000b7001b6808","created":1758197102509}
+          {"name":"test_project","team":"570b9f4b2a7c0e3b008da6ec","teamName":"team_X1","owner":{"id":"570b9f4d2a7c0e4d008da6ef","email":"user_a@scalableminds.com","firstName":"user_A","lastName":"last_A","isAdmin":true,"isDatasetManager":true,"isAnonymous":false,"teams":[{"id":"570b9f4b2a7c0e3b008da6ec","name":"team_X1","isTeamManager":true},{"id":"59882b370d889b84020efd3f","name":"team_X3","isTeamManager":false},{"id":"59882b370d889b84020efd6f","name":"team_X4","isTeamManager":true}]},"priority":1,"paused":false,"expectedTime":1234,"isBlacklistedFromReport":false,"id":"68e613cbe100009b14c0b6ac","created":1759908811575}
         compression: none
   - request:
       method: GET
@@ -228,10 +240,12 @@ http_interactions:
       status:
         code: 200
       headers:
+        x-powered-by: Express
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Thu, 18 Sep 2025 12:05:02 GMT
+        date: Wed, 08 Oct 2025 07:33:31 GMT
+        connection: close
         content-type: application/json
         content-length: '1211'
       body:
@@ -241,13 +255,13 @@ http_interactions:
           those cells
           out!","teamId":"570b9f4b2a7c0e3b008da6ec","teamName":"team_X1","settings":{"allowedModes":["orthogonal","oblique","flight"],"branchPointsAllowed":true,"somaClickingAllowed":true,"volumeInterpolationAllowed":false,"mergerMode":false,"magRestrictions":{}},"recommendedConfiguration":null,"tracingType":"skeleton"},{"id":"570b9f4c2a7c0e4c008da6ff","summary":"ek_0674_BipolarCells","description":"Check
           those cells
-          out!","teamId":"69882b370d889b84020efd4f","teamName":"team_X2","settings":{"allowedModes":["orthogonal","oblique","flight"],"branchPointsAllowed":true,"somaClickingAllowed":true,"volumeInterpolationAllowed":false,"mergerMode":true,"magRestrictions":{}},"recommendedConfiguration":null,"tracingType":"skeleton"},{"id":"68cbf56e010000b7001b6807","summary":"test_task_type","description":"This
+          out!","teamId":"69882b370d889b84020efd4f","teamName":"team_X2","settings":{"allowedModes":["orthogonal","oblique","flight"],"branchPointsAllowed":true,"somaClickingAllowed":true,"volumeInterpolationAllowed":false,"mergerMode":true,"magRestrictions":{}},"recommendedConfiguration":null,"tracingType":"skeleton"},{"id":"68e613cbe100009b14c0b6ab","summary":"test_task_type","description":"This
           is a test task
           type","teamId":"570b9f4b2a7c0e3b008da6ec","teamName":"team_X1","settings":{"allowedModes":[],"branchPointsAllowed":true,"somaClickingAllowed":true,"volumeInterpolationAllowed":false,"mergerMode":false,"magRestrictions":{"min":1,"max":1}},"recommendedConfiguration":null,"tracingType":"volume"}]
         compression: none
   - request:
       method: GET
-      path: /api/v11/taskTypes/68cbf56e010000b7001b6807
+      path: /api/v11/taskTypes/68e613cbe100009b14c0b6ab
       headers:
         host: localhost:9000
         accept: '*/*'
@@ -264,22 +278,24 @@ http_interactions:
       status:
         code: 200
       headers:
+        x-powered-by: Express
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Thu, 18 Sep 2025 12:05:02 GMT
+        date: Wed, 08 Oct 2025 07:33:31 GMT
+        connection: close
         content-type: application/json
         content-length: '388'
       body:
         encoding: utf8
         data: >-
-          {"id":"68cbf56e010000b7001b6807","summary":"test_task_type","description":"This
+          {"id":"68e613cbe100009b14c0b6ab","summary":"test_task_type","description":"This
           is a test task
           type","teamId":"570b9f4b2a7c0e3b008da6ec","teamName":"team_X1","settings":{"allowedModes":[],"branchPointsAllowed":true,"somaClickingAllowed":true,"volumeInterpolationAllowed":false,"mergerMode":false,"magRestrictions":{"min":1,"max":1}},"recommendedConfiguration":null,"tracingType":"volume"}
         compression: none
   - request:
       method: DELETE
-      path: /api/v11/taskTypes/68cbf56e010000b7001b6807
+      path: /api/v11/taskTypes/68e613cbe100009b14c0b6ab
       headers:
         host: localhost:9000
         accept: '*/*'
@@ -296,10 +312,12 @@ http_interactions:
       status:
         code: 200
       headers:
+        x-powered-by: Express
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Thu, 18 Sep 2025 12:05:02 GMT
+        date: Wed, 08 Oct 2025 07:33:31 GMT
+        connection: close
         content-type: application/json
         content-length: '80'
       body:
@@ -310,7 +328,7 @@ http_interactions:
         compression: none
   - request:
       method: DELETE
-      path: /api/v11/projects/68cbf56e010000b7001b6808
+      path: /api/v11/projects/68e613cbe100009b14c0b6ac
       headers:
         host: localhost:9000
         accept: '*/*'
@@ -327,10 +345,12 @@ http_interactions:
       status:
         code: 200
       headers:
+        x-powered-by: Express
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Thu, 18 Sep 2025 12:05:02 GMT
+        date: Wed, 08 Oct 2025 07:33:31 GMT
+        connection: close
         content-type: application/json
         content-length: '61'
       body:
