--- a/webknossos/tests/cassettes/test_user/test_get_logged_time.yml
+++ b/webknossos/tests/cassettes/test_user/test_get_logged_time.yml
@@ -18,10 +18,12 @@ http_interactions:
       status:
         code: 200
       headers:
+        x-powered-by: Express
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Thu, 18 Sep 2025 12:05:04 GMT
+        date: Wed, 08 Oct 2025 07:33:32 GMT
+        connection: close
         content-type: application/json
         content-length: '717'
       body:
@@ -48,10 +50,12 @@ http_interactions:
       status:
         code: 200
       headers:
+        x-powered-by: Express
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Thu, 18 Sep 2025 12:05:04 GMT
+        date: Wed, 08 Oct 2025 07:33:32 GMT
+        connection: close
         content-type: application/json
         content-length: '625'
       body:
