--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -244,7 +244,7 @@ jobs:
         timeout-minutes: 30
         env:
           PYTHON_VERSION: ${{ matrix.python-version }}
-          COVERAGE_FILE: ".coverage/${{ matrix.group }}.coverage"
+          COVERAGE_FILE: ".coverage.${{ matrix.group }}"
         run: ./test.sh --splits 3 --group ${{ matrix.group }} --splitting-algorithm least_duration --cov=webknossos --cov-report=
 
       - name: Python tests
@@ -259,7 +259,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report-${{ matrix.group }}
-          path: ".coverage/${{ matrix.group }}.coverage"
+          path: ".coverage.${{ matrix.group }}"
           retention-days: 1 # Automatically deletes after 1 day
 
       - name: Check if git is dirty
@@ -328,7 +328,7 @@ jobs:
         env:
           COVERAGE_FILE: "~/coverage-files/result.coverage"
         run: |
-          coverage combine ~/coverage-files/**/*.coverage
+          coverage combine ~/coverage-files/**/.coverage.*
           coverage xml -i -o ~/coverage-files/result.xml
 
       - name: Report coverage
