--- a/webknossos/pyproject.toml
+++ b/webknossos/pyproject.toml
@@ -37,7 +37,6 @@ dependencies = [
     "boltons >=21.0.0",
     "cattrs >=22.0.0",
     "certifi >=2023",
-    "click <8.2.0", # pinned because of incompatibility with typer
     "cluster-tools",
     "httpx ~=0.27.0",
     "loxun ~=2.0.0",
@@ -50,10 +49,11 @@ dependencies = [
     "python-dotenv ~=1.0.1",
     "rich ~=13.8.0",
     "scipy >=1.13",
-    "tensorstore==0.1.76",
+    "tensorstore ==0.1.76; sys_platform == 'win32'",
+    "tensorstore ~=0.1.78; sys_platform != 'win32'",
     "typer ~=0.12.5",
     "typing-extensions ~=4.0",
-    "universal-pathlib ~=0.2",
+    "universal-pathlib ~=0.3",
     "wkw ==1.1.24",
     "zipp ~=3.5.0",
 ]
