--- a/webknossos/pyproject.toml
+++ b/webknossos/pyproject.toml
@@ -51,10 +51,11 @@ dependencies = [
     "rich ~=13.8.0",
     "s3fs>=2024.6.1",
     "scipy >=1.13",
-    "tensorstore~=0.1.74",
+    "tensorstore ==0.1.76; sys_platform == 'win32'", # tensorstore crashes on windows with >0.1.76
+    "tensorstore ~=0.1.78; sys_platform != 'win32'",
     "typer ~=0.12.5",
     "typing-extensions ~=4.0",
-    "universal-pathlib ~=0.2",
+    "universal-pathlib ~=0.3",
     "wkw ==1.1.24",
     "zipp ~=3.5.0",
 ]
@@ -89,9 +90,8 @@ all = [
     "webknossos[examples]",
 ]
 
-[tool.uv]
-extra-index-url = ["https://pypi.scm.io/simple"]
-dev-dependencies = [
+[dependency-groups]
+dev = [
     "coverage>=7.8.0",
     "fsspec ~=2024.6.0",
     "hypothesis ~=6.35.0",
@@ -109,6 +109,9 @@ dev-dependencies = [
     "types-python-dateutil ~=2.9",
     "ruff ~=0.11.0",
 ]
+
+[tool.uv]
+extra-index-url = ["https://pypi.scm.io/simple"]
 
 [tool.uv.sources]
 cluster-tools = { path = "../cluster_tools", editable = true }
