allow annotation id or url with no dataset_id

--- a/webknossos/pyproject.toml
+++ b/webknossos/pyproject.toml
@@ -146,6 +146,7 @@ exclude = [
     "site-packages",
     "venv",
     "webknossos/dataset/_utils/vendor",
+    "webknossos/proofreading/generated",
 ]
 
 # Same as Black.
