add get_agglomerate_graph to annotation (#1361)
* add get_agglomerate_graph to annotation

* ignore generated python code in ruff

* add type hints

* ignore type hints in ruff

* fix import and type

* add protobuf file

* update docs dependencies

* move _get_graph to abstract_api_client

* move generated files into own folder and update comments

* add generated code

* Apply suggestion from @fm3

Co-authored-by: Florian M <fm3@users.noreply.github.com>

* Apply suggestion from @fm3

Co-authored-by: Florian M <fm3@users.noreply.github.com>

* introduce _get_parsed_protobuf on the abstract_api_client. Add more comments. add changelog.

* reset symlink

* relax protobuf constraint

---------

Co-authored-by: valentin-pinkau <valentin.pinkau@scalableminds.com>
Co-authored-by: Florian M <fm3@users.noreply.github.com>

--- a/webknossos/pyproject.toml
+++ b/webknossos/pyproject.toml
@@ -45,6 +45,8 @@ dependencies = [
     "networkx ~=3.2.1",
     "numpy >=2.0.0,<3.0.0",
     "pims ~=0.7.0",
+    "protobuf<7,>=3.12.0",
+    "google-api-python-client >= 2.0.0",
     "psutil ~=6.0.0",
     "python-dateutil ~=2.8.0",
     "python-dotenv ~=1.0.1",
@@ -149,6 +151,8 @@ exclude = [
     "site-packages",
     "venv",
     "webknossos/dataset/_utils/vendor",
+    "webknossos/proofreading/generated/agglomerate_graph_pb2.py",
+    "webknossos/proofreading/generated/agglomerate_graph_pb2.pyi",
 ]
 
 # Same as Black.
